--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "packageManager": "yarn@4.5.3",
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
-  }
+	"packageManager": "yarn@4.5.3",
+	"devDependencies": {
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.16"
+	},
+	"scripts": {
+		"css": "tailwindcss -i ./src/input.css -o ./stylesheet.css --watch"
+	}
 }
